<resources>
    <string name="app_name">Laesomondo</string>

    <string name="mainMenuTitle">Laesomondo</string>
    <string name="mainMenuReadingTestButton">Læsetest</string>
    <string name="mainMenuLogInButton">Log Ind</string>

    <string name="mainMenuUserLoggedInTitle">Laesomondo</string>
    <string name="mainMenuUserLoggedInReadingTestButton">Læsetest</string>
    <string name="mainMenuUserLoggedInMyProfile">Min Profil</string>
    <string name="mainMenuUserLoggedInLogOut">Log Ud</string>

    <string name="logInUserNameButton">Brugernavn:</string>
    <string name="logInPasswordButton">Kodeord:</string>
    <string name="logInLogInButton">Log Ind</string>

    <string name="readingTestPrerequisitesReadingTime">Hvor lang tid vil du læse? (i minutter)</string>
    <string name="readingTestPrerequisitesReadingDifficulty">Hvilken sværhe

    dsgrad skal teksten have?</string>
<string name="readingTestPrerequisitesStartButton">LÆS!</string>
    <string name="readingTestReadingMaterial"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tristique sapien in laoreet interdum. Curabitur interdum ultricies laoreet. Pellentesque eu rutrum erat. Vivamus efficitur leo quis mauris dapibus eleifend. Phasellus non quam et turpis scelerisque tincidunt. Mauris lorem tellus, venenatis id tempus id, lobortis vel dui. Nunc massa lectus, sodales sit amet interdum eget, porta eget libero. Aenean id mi nibh. Morbi sit amet elit ex.

Donec diam nunc, volutpat eget quam aliquam, vehicula suscipit dui. Etiam congue dictum felis id rhoncus. Curabitur id sapien eget ligula molestie aliquet. Donec dapibus sollicitudin risus vitae vehicula. Morbi et eros at risus viverra tincidunt. Mauris commodo finibus elementum. Nulla ultrices tellus arcu, at pulvinar libero luctus non. Donec eget fringilla augue. Maecenas lorem lorem, auctor et purus sit amet, dapibus blandit ipsum.

Aliquam iaculis consectetur diam nec sagittis. Duis eu aliquam lacus, eu pharetra lacus. Ut quis congue arcu, quis tempus mi. Pellentesque quis tellus viverra, aliquet dolor quis, tincidunt nisl. Integer rutrum nunc a purus accumsan dignissim. Quisque quam nulla, consequat luctus felis et, rhoncus scelerisque lectus. Phasellus ipsum elit, pulvinar ut lorem sit amet, sagittis porta nisl. Mauris elementum et sem a cursus. Vestibulum ultricies ultricies quam vel ullamcorper. Mauris pellentesque massa vel ex volutpat cursus. Cras tincidunt cursus ex, ut hendrerit odio vehicula sed. Nulla venenatis dolor aliquet augue sagittis, fermentum ultrices nulla sollicitudin. Nam eu risus tristique diam viverra sodales.

Sed vitae mauris nec nisi pretium fringilla id non metus. Nulla sagittis justo in risus lobortis, nec vehicula tortor sodales. Phasellus semper vehicula neque, volutpat ullamcorper eros porta in. Praesent sed turpis ut arcu finibus tincidunt. Curabitur lacinia arcu lorem. Maecenas semper interdum auctor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus pulvinar nibh nunc, eget pretium lorem lobortis quis. Pellentesque scelerisque est id lorem bibendum accumsan.

Pellentesque sit amet eros est. Mauris pellentesque eros quis magna interdum, mollis tempus nulla commodo. Cras facilisis nunc nisl, eget consequat augue euismod eget. Integer iaculis tortor a odio porttitor, ut fringilla quam pretium. Proin nec metus quis urna scelerisque sodales eu at purus. Proin vel magna blandit, aliquet orci et, interdum arcu. Morbi maximus augue a metus porttitor, in tristique velit tristique. Aliquam cursus scelerisque augue sed ornare. Duis augue orci, porta non luctus quis, volutpat et elit. Vivamus vitae mollis risus. Donec eget dui quis dolor porttitor varius. Pellentesque sit amet euismod arcu. Mauris aliquam mollis lacus id laoreet. Suspendisse quis porttitor enim, ut tristique tortor. Vestibulum suscipit nibh ut ex interdum molestie nec porta enim.</string>
    <string name="readingTestStopButton">Stop</string>

    <string name="summaryPopUpReadingTime">%1$d minutes and %2$d seconds</string>
    <string name="summaryPopUpTryAgainButtonText">Ny Test</string>
    <string name="summaryPopUpTBD">Min Side</string>
    <string name="udvikling">Udvikling</string>
    <string name="main_menu_tekst_fra_nettet">Tekst Fra Web</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Indstillinger</string>

    <string name="UserProfileUserPre">Bruger:</string>
    <string name="UserProfileUserPost">Master567</string>
    <string name="UserProfileNamePre">Navn:</string>
    <string name="UserProfileNamePost">Kim Hansen</string>
    <string name="UserProfileAgePre">Alder:</string>
    <string name="UserProfileAgePost">19</string>
    <string name="minProfilActionBar">minProfilActionBar</string>

    <string name="FAQ_lasetest"><b>Hvordan tager jeg en læsetest?</b> \n \n Når du skal tage en læsetest benyttes enten knappen i hovedmenuen eller knappen i sidemenuen. Herfra får du lov at vælge den genre, du vil læse, samt valg af tid og sværhedsgrad.</string>

    <string name="FAQ_tekst_graf"><b>Hvordan læser jeg grafen på min profil? </b>\n \n Grafen afbilder din læseevne i forhold til gennemsnittet. Den grønne søjle repræsenterer den gennemsnitlige læsers fart, og denne kan således måles op mod dit eget resultat, givet ved den blå søjle. Du kan scrolle til højre eller venstre afhængig af, hvor mange resultater, der er gemt.</string>
    <string name="FAQ_tekst_web"><b>Hvordan finder jeg tekst på nettet?</b> \n \n Når du skal finde en artikel eller anden form for tekst fra nettet, skal du finde knappen * Tekst Fra Web * i sidemenuen eller hovedmenuen. Herefter kan du hente teksten fra det vindue, du står i vha. knappen nede i højre hjørne.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
