<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.magnus.laesomondo.fragments.AboutFrag">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        style="@style/FAQText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/FAQ_lasetest"
        android:id="@+id/testQuest"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <TextView
        style="@style/FAQText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FAQ_tekst_web"
        android:textAlignment="center"
        android:id="@+id/webQuest"
        android:layout_below="@id/testQuest"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <TextView
        style="@style/FAQText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FAQ_tekst_graf"
        android:textAlignment="center"
        android:id="@+id/graphQuest"
        android:layout_below="@id/webQuest"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

</RelativeLayout>
