<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.magnus.laesomondo.MainMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainMenuTitle"
        android:id="@+id/mainMenuUserLoggedInTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainMenuReadingTestButton"
        android:id="@+id/mainMenuUserLoggedInReadingTestButton"
        android:layout_below="@+id/mainMenuUserLoggedInTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="123dp"
        android:onClick="onLaeseTest"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainMenuLogInButton"
        android:id="@+id/mainMenuLogInButton"
        android:layout_below="@+id/mainMenuUserLoggedInReadingTestButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp"
        android:onClick="onLogInd"/>

</RelativeLayout>
