<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.magnus.laesomondo.fragments.UserProfile">

    <RelativeLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView1"
            android:src="@drawable/krimi"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/UserProfileUserPre"
            android:id="@+id/textView1"
            android:layout_alignTop="@+id/imageView1"
            android:layout_toEndOf="@+id/imageView1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/UserProfileUserPost"
            android:id="@+id/textView2"
            android:layout_alignTop="@+id/imageView1"
            android:layout_toEndOf="@+id/textView1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/UserProfileNamePre"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView1"
            android:layout_toEndOf="@+id/imageView1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/UserProfileNamePost"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView1"
            android:layout_toEndOf="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/UserProfileAgePre"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView3"
            android:layout_toEndOf="@+id/imageView1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/UserProfileAgePost"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView3"
            android:layout_toEndOf="@+id/textView5" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:text="Hej hvad sker der her i kommunen?"
            android:id="@+id/textView123123123" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressGraph"
            android:layout_alignParentBottom="true"/>
    </LinearLayout>

</LinearLayout>
