<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/franettettest"
    tools:context="com.example.magnus.laesomondo.LogIn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/logInUserNameButton"
        android:id="@+id/logInUserNameButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="143dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/logInPasswordButton"
        android:id="@+id/logInPasswordButton"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/logInUserNameButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userNameField"
        android:layout_alignTop="@+id/logInUserNameButton"
        android:layout_alignStart="@+id/passwordField"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logInLogInButton"
        android:id="@+id/logInLogInButton"
        android:layout_below="@+id/passwordField"
        android:layout_toEndOf="@+id/logInPasswordButton"
        android:layout_marginTop="65dp"
        android:onClick="onLoginAttempt"
        android:background="@drawable/roundcorners"/>
</RelativeLayout>
