<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.magnus.laesomondo.fragments.MainMenuUser">


    <LinearLayout android:orientation="horizontal" android:layout_height="fill_parent" android:layout_width="fill_parent"
        android:layout_below="@+id/relativeLayout2">

        <LinearLayout android:layout_weight="1" android:layout_height="fill_parent" android:layout_width="0dp">
        </LinearLayout>

    <RelativeLayout  android:layout_weight="3" android:layout_height="fill_parent" android:layout_width="0dp" >


        <Button
            style="@style/defaultButton"
            android:text="@string/mainMenuUserLoggedInReadingTestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:id="@+id/mainMenuUserLoggedInReadingTestButton"
            android:drawableLeft="@drawable/ic_school"
            android:textAlignment="textStart"
            android:drawablePadding="10dp"

            />

        <Button
            style="@style/defaultButton"
            android:text="Tekst fra Nettet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainMenuUserLoggedInReadingTestButton"
            android:layout_alignStart="@+id/mainMenuUserLoggedInReadingTestButton"
            android:layout_marginTop="38dp"
            android:id="@+id/mainMenuUserLoggedInTextFromNet"
            android:drawableLeft="@drawable/ic_search"
            android:textAlignment="textStart"
            android:drawablePadding="10dp"
            />

        <Button
            style="@style/logOutButton"
            android:text="@string/mainMenuUserLoggedInLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainMenuUserLoggedInLogOut"
            android:layout_alignParentBottom="true"
            android:drawableLeft="@drawable/ic_lock"
            />

        <Button
            style="@style/defaultButton"
            android:text="@string/mainMenuUserLoggedInMyProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainMenuUserLoggedInMyProfile"
            android:drawableLeft="@drawable/ic_account"
            android:textAlignment="textStart"
            android:drawablePadding="10dp"
            android:layout_above="@+id/mainMenuUserLoggedInLogOut"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="47dp" />
    </RelativeLayout>

    <LinearLayout android:layout_weight="1" android:layout_height="fill_parent" android:layout_width="0dp"
        android:weightSum="1" android:paddingLeft="5dp">






        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
