<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.magnus.laesomondo.ReadingTestPrerequisites"
    android:background="@drawable/baggrundsstest">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/readingTestPrerequisitesReadingTime"
        android:id="@+id/readingTestPrerequisitesReadingTime"
        android:layout_alignParentTop="true"
        style="@style/defaultText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/readingTestPrerequisitesTimeSlider"
        android:layout_below="@+id/readingTestPrerequisitesReadingTime"
        android:layout_centerHorizontal="true"
        android:max="10"
        android:progress="8"
        android:thumbTint="#11ff00"
        android:progressTint="#11ff00"
        android:indeterminate="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/seekBarTimeValue"
        android:layout_below="@+id/readingTestPrerequisitesTimeSlider"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/readingTestPrerequisitesReadingDifficulty"
        android:id="@+id/readingTestPrerequisitesReadingDifficulty"
        android:layout_below="@+id/readingTestPrerequisitesTimeSlider"
        android:layout_centerHorizontal="true"
        style="@style/defaultText"
        android:layout_marginTop="50dp"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/readingTestPrerequisitesDifficultySlider"
        android:layout_below="@+id/readingTestPrerequisitesReadingDifficulty"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:max="3"
        android:progress="1"
        android:thumbTint="#11ff00"
        android:progressTint="#11ff00"
        android:indeterminate="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/seekBarDifficultyValue"
        android:layout_below="@+id/readingTestPrerequisitesDifficultySlider"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readingTestPrerequisitesStartButton"
        android:id="@+id/readingTestPrerequisitesStartButton"
        android:layout_below="@+id/readingTestPrerequisitesDifficultySlider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:onClick="startReadingTest"
        android:background="#11ff00"
        style="@style/defaultText"
        android:textColor="#000000"
        android:textSize="15dp" />

</RelativeLayout>
